assets/css/style.css
:root {
  --LightColor: rgb(229,229,229);
  --DarkColor: rgb(67, 94, 63);
  --TransparentColor: rgba(67, 94, 63, 0.8);
}

* {
  box-sizing: border-box;
  font-family: 'Raleway', sans-serif;
  color: var(--DarkColor);
  background-color: var(--LightColor);
  scroll-behavior: smooth;
}

li:hover {
  text-decoration: underline;
  transform: scale(1.2); 
  transition: transform .2s;

}

body {
  margin: 0;
  padding: 0;
  line-height: 1.2;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 0;
}

p {
  margin: 0;
  font-size: 3vh;;
}

header {
  display: flex;
  padding: 15px;
  padding-left: 0px;
  justify-content: space-between;
  background-color:var(--LightColor);
  font-size: 2.5vh;
}

header h1 {
  padding: 5px 5px 5px 30px;
  color: var(--LightColor);
  background-color: var(--DarkColor)
  
}

li {
  display: inline;

}

Nav li a {
  padding: 20px;
  font-weight: 700;
  color: var(--DarkColor);
  text-decoration: none;
}

.hero {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  background-image: url(../images/pattern1.jpg);
  background-size: 2500px;
  width: 100%;
  height: auto;
}

.hero img {
  width: 12%;
  height: 18%;
  margin-top: 30px;
  margin-right: 55px;
  margin-bottom: 10px;
  align-self: flex-end;
  border: solid 2px;
  object-fit: cover;
}

.hero h2 {
align-self: flex-end;
background-color: var(--DarkColor);
color: var(--LightColor);
padding: 3px;
margin-bottom: 30px;
margin-right: 30px;
font-size: 2.8vh;
}

.main_container{
  display: grid;
  justify-content: center;
  grid-template-columns: 300px 680px 680px;
  grid-template-rows: 200px 650px 350px 350px 1fr;
  margin-right: 20px;
  gap: 20px;
 
  grid-template-areas:

    "About_header About_text About_text"
    "Work_header Work_1 Work_1"
    "Work_header  Work_2 Work_3"
    "Work_header Work_4 Work_5"
    "Contact_header Contact_list Contact_list"
}

#About_header {

  grid-area: About_header;
  justify-self: flex-end;
  padding-right: 30px;
  font-size: 5vh;
  text-align: right;
  border-right: solid 4px var(--DarkColor);
  margin-top: 20px;
}

#About_text {
  grid-area: About_text;
  padding: 30px;
}

.bold_font {
  font-weight: 700;
}

.italic_font {
  font-style: italic;
}

.Brightness {
background-color: var(--DarkColor);
display: inline-block;
}

.Brightness img:hover {
    opacity: .5;
    }
 
#Work_header {
  grid-area: Work_header;
  justify-self: flex-end;
  padding-right: 30px;
  font-size: 5vh;
  text-align: right;
  border-right: solid 4px var(--DarkColor);
  margin-top: 20px;
  margin-bottom: 20px;
}

#Big_label {
  background: var(--TransparentColor);
  width: 15%;
  height: 15%;
  padding: 20px 40px; 
  color: var(--LightColor);
  position: relative;
  top: -150px;
  font-weight: 900;
  font-size: 2.0vh;
}

.Labels {
  background: var(--TransparentColor);
  width: 32%;
  height: 25%;
  padding: 30px; 
  color: var(--LightColor);
  position: relative;
  top: -150px;
  font-weight: 900;
  font-size: 2.0vh;
}

.Labels_small {
  background: transparent;
  color: var(--LightColor);
  font-size: 1.5vh;
  text-align:justify;
  font-weight: 500;
}

#Work_1 {
grid-area: Work_1;
}

#Work_1 img {
width: 100%;
height: 100%;
border: solid 6px var(--DarkColor);
object-fit: cover;
}

#Work_2 {
grid-area: Work_2;
}

#Work_2 img {
width: 100%;
height: 100%;
border: solid 6px var(--DarkColor);
object-fit: cover;
}

#Work_3 {
  grid-area: Work_3;
}

#Work_3 img {
width: 100%;
 height: 100%;
 border: solid 6px var(--DarkColor);
 object-fit: cover;
}

#Work_4 {
  grid-area: Work_4;
}

#Work_4 img {
  width: 100%;
   height: 100%;
   border: solid 6px var(--DarkColor);
   object-fit: cover;
}

#Work_5 {
  grid-area: Work_5;
}

#Work_5 img {
  width: 100%;
   height: 100%;
   border: solid 6px var(--DarkColor);
   object-fit: cover;
}

footer {
  display:grid;
  grid-template-columns: 295px 1fr;
  margin-bottom: 20px;
  grid-template-areas:

  "Contact_header Contact_list Contact_list"
}

#Contact_header {
  grid-area: Contact_header;
  padding: 30px;
  font-size: 5vh;
  text-align: right;
  border-right: solid 4px var(--DarkColor);
}

#Contact_list {
grid-area: Contact_list;
background-color: var(--LightColor);
display: flex;
justify-content: space-around;
align-items: flex-end;
padding-bottom: 25px;
}

#Contact_list a {
font-weight: 700;
font-size: 2.5vh;
color: var(--DarkColor);
text-decoration: none;
}


@media only screen and (max-width: 600px) {

nav {
    display: none;  
    }

  header {
  position: static;
  margin-left:20px;
  padding: 30px;

}

.hero {
  display: flex;
  flex-direction: column;
  background-image: url(../images/pattern1.jpg);
  background-size: 900px;
}

.hero img {
  width: 250px;
  align-self: center;
  border: solid 2px;
  margin-left: 70px;
  object-fit: cover;
}

.hero h2 {
  margin-right: 53px;
}

#About_header {

  padding: 20px;
  font-size: 6vh;
  text-align:center;
  border: none;
 
}

p {
  margin: 0;
  font-size: 3vh;;
}


#Work_header {

  margin-top: -35px;
  padding: 20px;
  font-size: 6vh;
  text-align:center;
  border: none;

}

.main_container {
  display: flex;
  flex-direction: column;
  justify-items: center;
  justify-content: center;
  margin-left: 20px;

  
}


footer {
  display: flex;
  flex-direction: column;
}

#Contact_header {
  padding: 20px;
  font-size: 6vh;
  text-align:center;
  border: none;
}

footer ul {
  display: flex;
  flex-direction: column;
  margin-left: 45px;
}

footer ul li {
  align-self: flex-start;
  margin-bottom: 15px;
  font-size: 3vh;
  text-decoration: underline;
}


#Big_label {
  background: var(--TransparentColor);
  width: 100%;
  height: 15%;
  padding: 20px 40px; 
  color: var(--LightColor);
  position: relative;
  top: -88px;
  font-weight: 900;
  font-size: 2.0vh;
}

.Labels {
  background: var(--TransparentColor);
  width: 100%;
  height: 15%;
  padding: 30px; 
  color: var(--LightColor);
  position: relative;
  top: -103px;
  font-weight: 900;
  font-size: 2.0vh;
}

.Labels_small {
  background: transparent;
  color: var(--LightColor);
  font-size: 1.5vh;
  text-align:justify;
  font-weight: 500;
}


}

